# crewai_shopping_flow

./: .gitignore  README.md  pyproject.toml
src/crewai_flow/: crew_checkout.py  crew_display.py  crew_shopping_flow.py  crew_state.py  main.py  tool_test.py
src/crewai_flow/crews/shopping_crew/: models.py  shopping_crew.py
src/crewai_flow/crews/shopping_crew/config/: agents.yaml
src/crewai_flow/tools/: custom_tool.py
src/crewai_shopping_flow/: checkout.py  main.py
src/crewai_shopping_flow/crews/shopping_crew/: llm_config.py  models.py  shopping_crew.py
src/crewai_shopping_flow/crews/shopping_crew/config/: agents.yaml  tasks.yaml
src/crewai_shopping_flow/tools/: custom_tool.py
