[project]
name = "crewai_shopping_flow"
version = "0.1.0"
description = "crewai_shopping_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "chainlit>=2.4.1",
    "crewai[tools]>=0.100.1,<1.0.0",
    "gspread>=6.2.0",
]

[project.scripts]
kickoff = "crewai_shopping_flow.main:kickoff"
plot = "crewai_shopping_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
